tests/baselines/reference/jsFileCompilationPublicMethodSyntaxOfClass.errors.txt
tests/cases/compiler/a.js(2,5): error TS8009: 'public' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    class C {
        public foo() {
        ~~~~~~
!!! error TS8009: 'public' can only be used in a .ts file.
        }
    }